--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,14 +28,14 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  shared_preferences: ^2.2.2
+  flutter_secure_storage: ^9.0.0
   flutter:
     sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  http: ^0.13.5
+  http: ^1.1.0
   intl: ^0.18.1
 
 dev_dependencies:
